# naruto-hand-signs-fighting

./: ProjectHome.md
documentation/NarutoHandSealsFighting-documentation/: .project  (+9 more)
project/NarutoHandSealsFighting/src/: CMakeLists.txt  DebugPrint.cxx  DebugPrint.h  dist-clean.sh  main-NHSF.cxx
project/NarutoHandSealsFighting/src/acquisitionSection/: Camera.cxx  Camera.h  cameraMain.cxx
project/NarutoHandSealsFighting/src/gameLogic/: CMakeLists.txt  GameLogic.h  HandSeal.cxx  HandSeal.h  Move.cxx  Move.h  MoveSet.cxx  MoveSet.h  Moves.dtd  Moves.xml  MovesFactory.cxx  MovesFactory.h  MovesFactoryAbstract.h  MovesFactorySettings.h.in  MovesSet.cxx  MovesSet.h  MovesSettings.cxx  MovesSettings.h  SealsFactory.cxx  SealsFactory.h  SealsFactoryAbstract.h  SealsMap.cxx  SealsMap.h  SealsSetting.cxx  SealsSettings.cxx  SealsSettings.h  movesTest.cxx  sealsTest.cxx
project/NarutoHandSealsFighting/src/gameLogic/tinyxml/: CMakeLists.txt
project/NarutoHandSealsFighting/src/gameStack/: CMakeLists.txt  FactoryGameMachine.cxx  FactoryGameMachine.h  GameElement.h  GameMachine.cxx  GameMachine.h  GameStack.h  TrainingDirector.cxx  TrainingDirector.h  TrainingSection.cxx  TrainingSection.h  gameStackTest.cxx
project/NarutoHandSealsFighting/src/gameStack/controller/: AbstractController.cxx  AbstractController.h  CMakeLists.txt  GeneralKeyboardController.cxx  GeneralKeyboardController.h  MainMenuController.cxx  MainMenuController.h  MovesListController.cxx  MovesListController.h  OptionsMenuController.cxx  OptionsMenuController.h  TrainingSectionController.cxx  TrainingSectionController.h
project/NarutoHandSealsFighting/src/gameStack/menu/: CMakeLists.txt  MainMenu.cxx  MainMenu.h  MenuElement.cxx  MenuElement.h  MovesList.cxx  MovesList.h  OptionsMenu.cxx  OptionsMenu.h
project/NarutoHandSealsFighting/src/gameStack/timers/: CMakeLists.txt  CountdownTimer.cxx  CountdownTimer.h  TimerNHSF.cxx  TimerNHSF.h
project/NarutoHandSealsFighting/src/gui/: AbstractEventListener.cxx  AbstractEventListener.h  AbstractFactory.cxx  AbstractFactory.h  AbstractGUIObject.cxx  AbstractGUIObject.h  CMakeLists.txt  EventToKeyPressConverter.cxx  EventToKeyPressConverter.h  Gui.h  MenuWindow.cxx  MenuWindow.h  MovesListBoxListener.cxx  MovesListBoxListener.h  MovesListListener.cxx  MovesListListener.h  MovesListWindow.cxx  MovesListWindow.h  OptionsWindow.cxx  OptionsWindow.h  ThumbnailImage.cxx  ThumbnailImage.h  TrainingGEWindow.cxx  TrainingGEWindow.h  TrainingWindow.cxx  TrainingWindow.h  boh.cxx  boh.h  guiTest.cxx  myButtonListener.cxx  myButtonListener.h
project/NarutoHandSealsFighting/src/gui/guichan-0.8.2/: CMakeLists.txt
project/NarutoHandSealsFighting/src/gui/guichan-0.8.2/examples/: helloworld.hpp  sdlaction  sdlhelloworld  sdlwidgets  widgets.hpp
project/NarutoHandSealsFighting/src/gui/guichan-0.8.2/src/sdl/: sdlimageloader.cpp
project/NarutoHandSealsFighting/src/recognitionEngine/: CMakeLists.txt  ImageProcessing.cxx  ImageProcessing.h  ModulesPool.cxx  ModulesPool.h  Move.h  RecognitionEngine.cxx  RecognitionEngine.h  RecognitionEngineDefaults.h  mainEngine.cxx  reTest.cxx
project/NarutoHandSealsFighting/src/recognitionEngine/engineModules/: All.h  BackgroundRemovalEM.cxx  BackgroundRemovalEM.h  BlurEM.cxx  BlurEM.h  CMakeLists.txt  CannyEM.cxx  ClosureEM.cxx  ClosureEM.h  ContoursFinderEM.cxx  ContoursFinderEM.h  FourierEM.h  HistogramEM.cxx  LaplacianEM.cxx  SobelEM.cxx  SobelEM.h
project/NarutoHandSealsFighting/src/recognitionEngine/engineStrategies/: AGoodStrategy.cxx  AGoodStrategy.h  AbstractStrategy.cxx  AbstractStrategy.h  AllStrategies.h  CMakeLists.txt  DefaultStrategy.cxx  DefaultStrategy.h  XperienceStrategy.cxx  XperienceStrategy.h
project/NarutoHandSealsFighting/src/recognitionEngine/evaluationFunctions/: CMakeLists.txt  ContoursChecker.cxx  ContoursChecker.h  EvaluatorFunctionTemplate.h  MulEvaluator.cxx  MulEvaluator.h
project/NarutoHandSealsFighting/src/recognitionEngine/processingFunctions/: AbstractProcessingFunction.h  AllProcessingFunctions.h  CMakeLists.txt  ChainAdder.cxx  ChainAdder.h  DifferentTempsAdder.cxx  DifferentTempsAdder.h  SChainBGRemoval.cxx  SChainBGRemoval.h  SimpleChain.cxx  SimpleChain.h
project/NarutoHandSealsFighting/src/templatesCreationSection/: CMakeLists.txt  README.txt  TemplateCreator.cxx  TemplateCreator.h  templateCreator.cxx  templateCreator.h  templateCreator.sh  templateCreatorLauncher.cxx  templateCreatorLauncher.h.in
tutorial/guichanGuiTutorial/src/: CMakeLists.txt  guiTutorial.cxx
tutorial/guichanGuiTutorial/src/guichan-0.8.2/: CMakeLists.txt
tutorial/guichanGuiTutorial/src/guichan-0.8.2/examples/: sdlwidgets
tutorial/guichanGuiTutorial/src/myGui/: AbstractFactory.cxx  AbstractFactory.h  AbstractGUIObject.h  ButtonMenu.cxx  ButtonMenu.h  CMakeLists.txt  MenuWindow.cxx  MenuWindow.h  TrainingWindow.cxx  TrainingWindow.h  myButtonListener.h
tutorial/openCVtutorial/src/camera/: CMakeLists.txt  Camera.cxx  Camera.h  cameraMain.cxx
tutorial/openCVtutorial/src/contours/: CMakeLists.txt  Histogram.cxx  Histogram.h  contours.cxx
tutorial/openCVtutorial/src/contours2/: CMakeLists.txt  contours2Main.cxx
tutorial/openCVtutorial/src/contoursCamera/: CMakeLists.txt  contours2Main.cxx
tutorial/openCVtutorial/src/displayImage/: CMakeLists.txt  displayImage.cpp
tutorial/openCVtutorial/src/enginePrototype/: CMakeLists.txt  CannyEM.h  EngineModule.h  FourierEM.cxx  HistogramEM.cxx  LaplacianEM.cxx  LaplacianEM.h  RecognitionEngine.cxx  RecognitionEngine.h  SobelEM.cxx  SobelEM.h  mainEngine.cxx
tutorial/openCVtutorial/src/enginePrototype/engineModules/: CannyEM.cxx  CannyEM.h  ContoursFinderEM.cxx  ContoursFinderEM.h  EngineModule.h  FourierEM.cxx  FourierEM.h  HistogramEM.cxx  HistogramEM.h  LaplacianEM.h  SobelEM.cxx  SobelEM.h
tutorial/openCVtutorial/src/helloWorld/: CMakeLists.txt  helloWorld.cxx
tutorial/openCVtutorial/src/imageTutorial/: CMakeLists.txt  MyFourier.cxx  MyFourier.h  imageTutorial.cxx
tutorial/openCVtutorial/src/paintedCamera/: CMakeLists.txt  Camera.cxx  Camera.h  mainPaintedCamera.cxx
(+30 files in other folders)
